--- a/References.bib
+++ b/References.bib
@@ -49,6 +49,17 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
   pages = {235--248}
 }
 
+@article{mather2019practical,
+    author = {Mather, Nicholas and Traves, Suzanne M and Ho, Simon Y W},
+    title = {A practical introduction to sequentially Markovian coalescent methods for estimating demographic history from genomic data},
+    journal = {Ecology and Evolution},
+    year = {2019},
+    volume = {10},
+    number = {1},
+    pages = {579-589},
+    doi = {10.1002/ece3.5888}
+}
+
 
 @article{meier2008use,
   title={The Use of Mean Instead of Smallest Interspecific Distances Exaggerates the Size of the ``Barcoding Gap" and Leads to Misidentification},
