--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -36,7 +36,7 @@
 \makeatletter
 \renewcommand{\maketitle}{\bgroup\setlength{\parindent}{0pt}
 \begin{flushleft}
-  \textbf{\@title}
+\textbf{\@title}
 
   \@author
 \end{flushleft}\egroup
@@ -49,8 +49,8 @@
 
 \title{A Bayesian Model of the DNA Barcode Gap}
 
-\author{Jarrett D. Phillips$^{1, 3*}$ (ORCID: 0000-0001-8390-386X)  \\
-\textit{$^1$School of Computer Science, University of Guelph, Guelph, ON., Canada, N1G2W1}}
+\author{Jarrett D. Phillips$^{1, 2*}$ (ORCID: 0000-0001-8390-386X)  \\
+\textit{$^1$School of Computer Science, University of Guelph, Guelph, ON., Canada, N1G2W1} \\ \textit{$^2$Department of Integrative Biology, University of Guelph, Guelph, ON., Canada, N1G2W1} }
 
 \date{}
 
@@ -92,7 +92,7 @@ p_x &= \frac{\#\{d_{ij} \geq a\}}{\#\{d_{ij}\}} \\[1mm]
 q_x &= \frac{\#\{d_{XY} \leq b\}}{\#\{d_{XY}\}}
 \end{align}
 
-\noindent where $d_{ij}$ and $d_{XY}$ are distances within and among species, respectively, and the notation \# reflects a count (\textbf{Figure 1}). Quantities $a$ and $b$ correspond to min($d_{XY}$) and max($d_{ij}$), the minimum interspecific distance and the maximum intraspecific distance, respectively. Notice that $a$ and $b$ are also the first and $n$th order statistics, respectively. Distances are easily computed from a model of DNA sequence evolution, such as $p$ distance. Similar expressions (denoted $p^{'}_x$ and $q^{'}_x$) for nearest neighbour species were also given (see \cite{phillips2024measure}), in which $d_{XY}$ included only interspecific distances between the species of interest and its closest neighbouring species. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences. such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed interval [0, 1]. Values of the estimators obtained from equations (1) and (2) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. Equations (1) and (2) can be expressed in terms of empirical cumulative distribution functions (ECDFs)
+\noindent where $d_{ij}$ and $d_{XY}$ are distances within and among species, respectively, and the notation \# reflects a count (\textbf{Figure 1}). Quantities $a$ and $b$ correspond to min($d_{XY}$) and max($d_{ij}$), the minimum interspecific distance and the maximum intraspecific distance, respectively. Notice that $a$ and $b$ are also the first and $n$th order statistics, respectively. Distances are easily computed from a model of DNA sequence evolution, such as uncorrected or corrected p-distances \citep{jukes1969evolution, kimura1980simple}. Similar expressions (denoted $p^{'}_x$ and $q^{'}_x$) for nearest neighbour species were also given (see \cite{phillips2024measure}), in which $d_{XY}$ included only interspecific distances between the species of interest and its closest neighbouring species. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous samples of DNA sequences. such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed interval [0, 1]. Values of the estimators obtained from equations (1) and (2) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the presence of a DNA barcode gap for a target species. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap. Equations (1) and (2) can be expressed in terms of empirical cumulative distribution functions (ECDFs)
 
 \begin{align}
 p_x &= \mathbb{P}(d_{ij} \geq a) \hspace{2.5mm} = 1 - \hat{F}_{d_{ij}}(a) = \hat{F}_{d_{ij}}(b) - \hat{F}_{d_{ij}}(a)  \\
@@ -114,14 +114,14 @@ A major criticism of large sample (frequentist) theory is that it relies on asym
 
 \subsection{The Model}
 
-Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval. Here, it is sought to numerically approximate the extent of \\ overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within [$a$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1) and (2)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, M, C\}$ are total counts of intraspecific, interspecific, and combined genetic distances for a target species along with its nearest neighbour species, and \\ $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be directly proportional to the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
+Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval. Here, it is sought to numerically approximate the extent of \\ overlap/separation of intraspecific and interspecific pairwise genetic distance distributions within [$a$, $b$]. This is a challenging computational problem within the current study as detailed in subsequent sections. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1) and (2)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, C\}$ are total count vectors of intraspecific and combined genetic distances, respectively, for a target species along with its nearest neighbour species, and $k = M$ is a total count vector for all pairwise species comparisons. The quantity \\ $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be directly proportional to the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
 
 \begin{align}
-\notag y_\mathrm{lwr}[x] &\sim \mathrm{Binomial}(N[x], p_\mathrm{lwr}[x]) \\ 
-\notag y_\mathrm{upr}[x] &\sim \mathrm{Binomial}(M, p_\mathrm{upr}[x]) \\ 
-y^{'}_\mathrm{lwr}[x] &\sim \mathrm{Binomial}(N[x], p^{'}_\mathrm{lwr}[x]) \\ 
- \notag y^{'}_\mathrm{upr}[x] &\sim \mathrm{Binomial}(C[x], p^{'}_\mathrm{upr}[x]) \\ 
-\notag p_\mathrm{lwr}[x], p_\mathrm{upr}[x], p^{'}_\mathrm{lwr}[x], p^{'}_\mathrm{upr}[x]
+\notag y_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p_\mathrm{lwr}) \\ 
+\notag y_\mathrm{upr} &\sim \mathrm{Binomial}(M, p_\mathrm{upr}) \\ 
+y^{'}_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p^{'}_\mathrm{lwr}) \\ 
+ \notag y^{'}_\mathrm{upr} &\sim \mathrm{Binomial}(C, p^{'}_\mathrm{upr}) \\ 
+\notag p_\mathrm{lwr}, p_\mathrm{upr}, p^{'}_\mathrm{lwr}, p^{'}_\mathrm{upr}
 &\sim \mathrm{Beta}(1, 1).
 \end{align}
 
